force-app/main/default/objects/Field_Format__mdt/Field_Format__mdt.object-meta.xml
<CustomObject>
    <label>Field Format</label>
    <pluralLabel>Field Formats</pluralLabel>
</CustomObject>