force-app/main/default/objects/Field_Format__mdt/fields/Field_Format__c.field-meta.xml
<CustomField>
    <fullName>Field_Format__c</fullName>
    <label>Field Format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>