force-app/main/default/objects/Field_Format__mdt/fields/Format_Message__c.field-meta.xml
<CustomField>
    <fullName>Format_Message__c</fullName>
    <label>Format Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>