force-app/main/default/objects/Field_Format__mdt/fields/Mandatory_Field__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Field__c</fullName>
    <label>Mandatory Field</label>
    <referenceTo>Mandatory_Field__mdt</referenceTo>
    <relationshipLabel>Field Formats</relationshipLabel>
    <relationshipName>Field_Formats</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>