force-app/main/default/objects/Field_Format__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>